tests/snapshots/json_snapshots__forget.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "forget",
  "data": {
    "artifacts": [
      {
        "action": "deleted",
        "path": "$ROOT/adopted/.wt"
      }
    ],
    "forgotten": true,
    "target": "repo/adopted"
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
