tests/snapshots/json_snapshots__lint.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "lint",
  "data": {
    "args": [],
    "child": {
      "code": 0,
      "signal": null
    },
    "log": "<log>",
    "steps": [
      {
        "child": {
          "code": 0,
          "signal": null
        },
        "duration_ms": "<duration_ms>",
        "id": "lint",
        "scope": ".",
        "status": "ok"
      }
    ],
    "target": "repo",
    "task": "lint"
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
