tests/snapshots/json_snapshots__open.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "open",
  "data": {
    "sessions": [
      {
        "agent": null,
        "created": true,
        "existing": false,
        "foreground": false,
        "name": "repo",
        "target": "repo"
      }
    ]
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
