tests/snapshots/json_snapshots__refresh.snap
---
source: tests/json_snapshots.rs
expression: "normalize(value, &h.root)"
---
{
  "command": "refresh",
  "data": {
    "after": "present",
    "before": "present",
    "child": {
      "code": 0,
      "signal": null
    },
    "scope": ".",
    "target": "repo",
    "task": "service"
  },
  "error": null,
  "notices": [],
  "ok": true,
  "wt": {
    "schema": 1,
    "version": "<version>"
  }
}
